Uppdaterat README-filen, installerat Leaflet, uppdaterat i map.html-filen med två divs för karta och sök, lagt style för dessa i layout.scss, adderat en egen js-fil för kartan och skapat en karta och markör

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sharp": "^0.31.3"
   },
   "dependencies": {
-    "chart.js": "^4.4.1"
+    "chart.js": "^4.4.1",
+    "leaflet": "^1.9.4"
   }
 }
